# ReausoConfig

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
rconfig/: ConfigStore.py
rconfig/util/: singleton.py
rconfig_unittests/util/: singleton_test.py
