[project]
authors = [{name = "Rene Ebertowski", email = "r.ebertowski@gmx.de"}]
dependencies = []
description = ""
name = "ReausoConfig"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["rconfig"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
pixi-pycharm = "*"

[tool.pixi.pypi-dependencies]
reausoconfig = { path = ".", editable = true }
"ruamel.yaml" = "==0.18.10"

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
test = ["test"]